--- a/bmi.html
+++ b/bmi.html
@@ -11,7 +11,8 @@
     padding: 20px;
     border: 5px solid limegreen;
     border-radius:10px;
-    margin: 0;
+    margin: 0px;
+                margin-top:60px;
 }
   
             
